--- a/css/other-services.less
+++ b/css/other-services.less
@@ -1,39 +1,49 @@
 .other-services {
-
+    padding-top: 60px;
     .columns {
-        margin: 0 auto;
         display: flex;
-        // align-content: space-around;
-        width: 70%;
         flex-wrap: wrap;
-        // padding: 10% 0;
-        h3 {
-            color: #494949;
-            font-family: "Raleway - Semi Bold", sans-serif;
-            // font-size: 18px;
-            // font-weight: 400;
-          text-align: left;
-        }
-
+        justify-content: center;
+        margin-top: 100px;
         p {
             color: #7c7c7c;
             font-family: "Raleway", sans-serif;
             font-size: 14px;
             font-weight: 500;
             line-height: 26px;
+            padding-top: 20px;
+            padding-left: 55px;
+        }
+        h3 {
+            color: #494949;
+            font-family: "Raleway - Semi Bold", sans-serif;
+            text-align: left;
+            margin-left: 55px;
         }
     }
 }
 
-.other-services .columns>div{
-    width: 33%;
-    // &:before{
-    //     content: url("../img/other-services/Game.svg");
-    // }
-    // background-image: url("../img/other-services/Game.svg");
-    // background-repeat: no-repeat;
+.other-services .columns>div {
+    width: 25%;
+    margin-right: 20px;
+    margin-bottom: 100px;
+    img {
+        float: left;
+    }
 }
 
-// .other-services .first:before{
-//     content: url("../img/other-services/Game.svg");
-// }
+@media(max-width: 768px){
+    .other-services .columns>div {
+        width: 30%;
+        margin-right: 15px;
+        margin-bottom: 50px;
+    }
+}
+
+@media(max-width: 660px){
+    .other-services .columns>div {
+        width: 100%;
+        margin-right: 5px;
+        margin-bottom: 10px;
+    }
+}
