--- a/css/style.less
+++ b/css/style.less
@@ -5,26 +5,6 @@
 @mysemifont: "Raleway - Semi Bold", sans-serif;
 @myrobofont: 'Roboto Slab', serif;
 
-body {
-    max-width: 1400px;
-    margin: 0 auto;
-    background-color: @mycolor;
-    header {
-        background: url("../img/header/background.jpg");
-        background-size: cover;
-        background-repeat: no-repeat;
-        height: 830px;
-        nav {
-            max-width: 70%;
-            border-bottom: 1px solid #b9dffc;
-            display: flex;
-            flex-wrap: wrap;
-            margin: 0 auto;
-            justify-content: space-between;
-            padding: 30px 0;
-        }
-    }
-}
 
 h2 {
     margin-top: 18px;
@@ -56,6 +36,39 @@ hr {
     margin-top: 20px;
 }
 
+body {
+    max-width: 1400px;
+    margin: 0 auto;
+    background-color: @mycolor;
+    header {
+        background: url("../img/header/background.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        height: 830px;
+        nav {
+            max-width: 1400px;
+            border-bottom: 1px solid #b9dffc;
+            display: flex;
+            justify-content: space-evenly;
+            position: fixed;
+            top: 0;
+            z-index: 9999;
+            width: 100%;
+            height: 100px;
+            transition: 0.3s;
+            padding-top: 30px;
+        }
+    }
+}
+
+header .navbar.sticky {
+    height: 53px;
+    padding-top: 0;
+    background: url("../img/header/background.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 .navbar {
     ul {
         display: flex;
@@ -84,8 +97,8 @@ hr {
 }
 
 header article {
-    margin-left: 15%;
-    margin-top: 16%;
+    padding-top: 230px;
+    padding-left: 15%;
     .info {
         width: 500px;
         h1 {
@@ -134,12 +147,6 @@ article {
     }
 }
 
-@media (max-width: 600px) {
-    header article .info {
-        width: auto;
-    }
-}
-
 // services
 
 section .services {
@@ -147,6 +154,7 @@ section .services {
     .headertop {
         padding-top: 95px;
     }
+
     .web {
         width: 300px;
         height: 115px;
@@ -192,20 +200,56 @@ section .services {
     }
 }
 
-@media(max-width: 600px) {
-    section .services {
-        .web {
-            padding: 120px 0;
-        }
-        .development {
-            background-size: 50px 50px;
-        }
-        .photography {
-            background-size: 50px 50px;
-        }
-        .vector {
+@media(max-width: 800px) {
+    header ul li:nth-child(2n+2) {
+        display: none;
+    }
+}
 
-            background-size: 50px 50px;
+
+@media(max-width: 600px) {
+    header article .info {
+        width: auto;
+        h1 {
+            font-size: 30px;
         }
+        p {
+            font-size: 20px;
+        }
+        .google {
+            margin-right: 0;
+            }
+            button {
+                width: 195px;
+                height: 55px;
+                margin-top: 7%;
+            }
+        }
+    
+    .navbar ul li a {
+        font-size: 12px;
+    }
+   
+section .services {
+    .web {
+        padding: 120px 0;
+    }
+    .development {
+        background-size: 50px 50px;
+    }
+    .photography {
+        background-size: 50px 50px;
+    }
+    .vector {
+        background-size: 50px 50px;
+        }
+    }
+}
+
+
+@media(max-width: 440px) {
+    .navbar ul li a {
+        font-size: 10px;
+        padding: 5px 3px;
     }
 }
