--- a/css/services.less
+++ b/css/services.less
@@ -90,3 +90,14 @@ section .great p {
             padding: 135px 2px 125px;
         }
 }
+
+@media (max-width: 480px) {
+    .unlim .column {
+        margin-top: 60px;
+        ul li {
+            font-size: 11px;
+            line-height: 24px;
+            padding-left: 23px;
+        }
+    }
+}
