--- a/css/style.less
+++ b/css/style.less
@@ -64,9 +64,7 @@ body {
 header .navbar.sticky {
     height: 53px;
     padding-top: 0;
-    background: url("../img/header/background.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
+    background-color: #44b2f1;
 }
 
 .navbar {
@@ -211,7 +209,7 @@ section .services {
     header article .info {
         width: auto;
         h1 {
-            font-size: 30px;
+            font-size: 25px;
         }
         p {
             font-size: 20px;
@@ -231,18 +229,25 @@ section .services {
     }
    
 section .services {
-    .web {
-        padding: 120px 0;
-    }
-    .development {
-        background-size: 50px 50px;
-    }
-    .photography {
-        background-size: 50px 50px;
-    }
-    .vector {
-        background-size: 50px 50px;
+        article {
+            padding-top: 95px;
+            display: block;
         }
+        .web {
+            width: 100%;
+            padding: 0;
+            height: 135px;
+            padding-top: 60px;
+            }
+            .development {
+                background-size: 50px 50px;
+            }
+            .photography {
+                background-size: 50px 50px;
+            }
+            .vector {
+                background-size: 50px 50px;
+            }
     }
 }
 
@@ -251,5 +256,9 @@ section .services {
     .navbar ul li a {
         font-size: 10px;
         padding: 5px 3px;
+    }
+    .navbar img {
+        width: 150px;
+        height: 50px;
     }
 }
